--- a/workbook.yml
+++ b/workbook.yml
@@ -5,6 +5,9 @@ environmentRepositoryRid: null
 backingRepositoryRids:
 - "ri.vector.runtime.artifacts.repository"
 - "ri.artifacts.repository.artifactory.internal-docker-release"
+- "ri.artifacts.repository.artifactory.external-conda-forge"
+- "ri.artifacts.repository.crp.discovered-rfilepaths"
+- "ri.artifacts.repository.artifactory.external-conda-anaconda"
 outputFolderRid: "ri.compass.main.folder.863bebcc-8bcb-4014-8b06-c39543e4f4d9"
 comparisonParentFolderRid: "ri.compass.main.folder.68aa2619-e479-459f-87de-36748913634f"
 legacyVectorLanguage: null
